--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -593,16 +593,16 @@
 	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
-	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
-	"mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
@@ -611,18 +611,18 @@
 	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
@@ -872,9 +872,9 @@
 	"mmorpg.talent.trickster_class_1": "Resourceful Thief",
 	"mmorpg.talent.trickster_class_2": "Master of Phasing",
 	"mmorpg.talent.trickster_class_3": "Trickery",
-	"mmorpg.talent.trickster_class_4": "Guidance of Stone",
-	"mmorpg.talent.trickster_class_5": "Doomed Path",
-	"mmorpg.talent.trickster_class_6": "Futility of Defense",
+	"mmorpg.talent.trickster_class_4": "Essence Leech",
+	"mmorpg.talent.trickster_class_5": "Slippery",
+	"mmorpg.talent.trickster_class_6": "Thick Cloak",
 	"mmorpg.talent.trident_damage_big": "Major Trident Damage",
 	"mmorpg.talent.true_hit": "True Hit",
 	"mmorpg.talent.versatility": "Versatility",
@@ -937,7 +937,7 @@
 	"mmorpg.stat.armor": "Armor",
 	"mmorpg.stat.armor_aura_cost": "\u00A77Armor Cost",
 	"mmorpg.stat.armor_penetration": "Armor Penetration",
-	"mmorpg.stat.armor_per_10_dodge": "\u00A7a[VAL1] \u00A79\u2605 Armor\u00A77 per 10 \u00A72\u2748 Dodge Rating\u00A77",
+	"mmorpg.stat.armor_per_10_dodge": "\u00A7a[VAL1] \u00A79\u2605 Armor\u00A77 per 10 \u00A72\u2605 Dodge Rating\u00A77",
 	"mmorpg.stat.armor_per_10_mana": "\u00A7a[VAL1] \u00A79\u2605 Armor\u00A77 per 10 \u00A79\u262F Mana\u00A77",
 	"mmorpg.stat.arrow_cast_time": "Arrow Cast Time",
 	"mmorpg.stat.arrow_cdr": "Arrow Spell Cooldown Reduction",
@@ -1060,7 +1060,7 @@
 	"mmorpg.stat.dmg_when_target_near_full_hp": "Damage to near Full Health Targets",
 	"mmorpg.stat.dodge": "Dodge Rating",
 	"mmorpg.stat.dodge_aura_cost": "\u00A77Dodge Cost",
-	"mmorpg.stat.dodge_per_10_magic_shield": "\u00A7a[VAL1] \u00A72\u2748 Dodge Rating\u00A77 per 10 \u00A7d\u2764 Magic Shield\u00A77",
+	"mmorpg.stat.dodge_per_10_magic_shield": "\u00A7a[VAL1] \u00A72\u2605 Dodge Rating\u00A77 per 10 \u00A7d\u2764 Magic Shield\u00A77",
 	"mmorpg.stat.dot_dmg": "Damage Over Time",
 	"mmorpg.stat.dot_lifesteal": "Damage Over Time Lifesteal",
 	"mmorpg.stat.double_attack_chance": "Double Attack Damage Chance",
@@ -1355,7 +1355,7 @@
 	"mmorpg.stat.magic_shield_on_is_blocked": "\u00A77Gain Magic Shield on Block",
 	"mmorpg.stat.magic_shield_on_is_dodged": "\u00A77Gain Magic Shield on Dodge",
 	"mmorpg.stat.magic_shield_on_kill": "Magic Shield on Kill",
-	"mmorpg.stat.magic_shield_per_10_dodge": "\u00A7a[VAL1] \u00A7d\u2764 Magic Shield\u00A77 per 10 \u00A72\u2748 Dodge Rating\u00A77",
+	"mmorpg.stat.magic_shield_per_10_dodge": "\u00A7a[VAL1] \u00A7d\u2764 Magic Shield\u00A77 per 10 \u00A72\u2605 Dodge Rating\u00A77",
 	"mmorpg.stat.magic_shield_per_10_mana": "\u00A7a[VAL1] \u00A7d\u2764 Magic Shield\u00A77 per 10 \u00A79\u262F Mana\u00A77",
 	"mmorpg.stat.magic_shield_per_sec": "Magic Shield Per Regen",
 	"mmorpg.stat.magic_shield_reg_aura_cost": "\u00A77MS Regen Cost",
@@ -1381,12 +1381,12 @@
 	"mmorpg.stat.max_all_resist": "Max None Resistance",
 	"mmorpg.stat.max_chaos_resist": "Max Chaos Resistance",
 	"mmorpg.stat.max_elemental_resist": "Max Elemental Resistance",
-	"mmorpg.stat.max_endurance_charge_charges": "Maximum Endurance Charge Charges",
+	"mmorpg.stat.max_endurance_charge_charges": "Maximum Endurance Charge",
 	"mmorpg.stat.max_fire_resist": "Max Fire Resistance",
-	"mmorpg.stat.max_frenzy_charge_charges": "Maximum Frenzy Charge Charges",
+	"mmorpg.stat.max_frenzy_charge_charges": "Maximum Frenzy Charge",
 	"mmorpg.stat.max_lightning_resist": "Max Lightning Resistance",
 	"mmorpg.stat.max_physical_resist": "Max Physical Resistance",
-	"mmorpg.stat.max_power_charge_charges": "Maximum Power Charge Charges",
+	"mmorpg.stat.max_power_charge_charges": "Maximum Power Charge",
 	"mmorpg.stat.max_total_summons": "Maximum Summons",
 	"mmorpg.stat.max_water_resist": "Max Cold Resistance",
 	"mmorpg.stat.melee_cast_time": "Melee Cast Time",
@@ -1871,6 +1871,138 @@
 "_comment": " [CATEGORY]: CHAT MESSAGES - NAMES",
 
 
+"_comment": " [CATEGORY]: AFFIXES - NAMES",
+
+	"mmorpg.affix.amber_amulet": "Amber Amulet",
+	"mmorpg.affix.arcane_staff": "Arcane Staff",
+	"mmorpg.affix.archeologists": "Archeologist's",
+	"mmorpg.affix.armor_eye": "Unused",
+	"mmorpg.affix.ass_bow": "Assassin Bow",
+	"mmorpg.affix.ass_crossbow": "Assassin Crossbow",
+	"mmorpg.affix.azure": "Azure",
+	"mmorpg.affix.bandit_mask": "Bandit Mask",
+	"mmorpg.affix.bone_bow": "Bone Bow",
+	"mmorpg.affix.bone_crossbow": "Bone Crossbow",
+	"mmorpg.affix.bone_helm": "Bone Circlet",
+	"mmorpg.affix.boundless": "Boundless",
+	"mmorpg.affix.chaos_damage_eye": "Unused",
+	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
+	"mmorpg.affix.chaos_res": "Of the Snake",
+	"mmorpg.affix.chaos_res_eye": "Unused",
+	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
+	"mmorpg.affix.cleric_staff": "Cleric Staff",
+	"mmorpg.affix.cold_damage_eye": "Unused",
+	"mmorpg.affix.cold_res_eye": "Unused",
+	"mmorpg.affix.crit_prefix": "Critical",
+	"mmorpg.affix.cursed_staff": "Cursed Staff",
+	"mmorpg.affix.desolation": "Desolation",
+	"mmorpg.affix.dodge_eye": "Unused",
+	"mmorpg.affix.dusk_blade": "Dusk Blade",
+	"mmorpg.affix.ene_ring": "Emerald Ring",
+	"mmorpg.affix.energetic": "Energetic",
+	"mmorpg.affix.energy_reg": "Invirogating",
+	"mmorpg.affix.energy_reg_eye": "Unused",
+	"mmorpg.affix.fire_damage_eye": "Unused",
+	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
+	"mmorpg.affix.fire_res": "Of the Drake",
+	"mmorpg.affix.fire_res_eye": "Unused",
+	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
+	"mmorpg.affix.fire_wep_dmg": "Scorched",
+	"mmorpg.affix.focused": "Focused",
+	"mmorpg.affix.glacial_staff": "Glacial Staff",
+	"mmorpg.affix.gladiator_helm": "Gladiator Helm",
+	"mmorpg.affix.glimmering": "Glimmering",
+	"mmorpg.affix.golden_crown": "Golden Crown",
+	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
+	"mmorpg.affix.heal_crit_prefix": "Truthful",
+	"mmorpg.affix.heal_suff": "Of Restoration",
+	"mmorpg.affix.health_reg_eye": "Unused",
+	"mmorpg.affix.hp_ring": "Coral Ring",
+	"mmorpg.affix.hunter_hood": "Hunter Hood",
+	"mmorpg.affix.immortal": "Immortal",
+	"mmorpg.affix.imperial_bow": "Imperial Bow",
+	"mmorpg.affix.imperial_crossbow": "Imperial Crossbow",
+	"mmorpg.affix.item_both_armor": "Reinforced",
+	"mmorpg.affix.item_both_dodge": "Scaled",
+	"mmorpg.affix.item_both_ms": "Fortified",
+	"mmorpg.affix.item_flat_armor": "Reinforced",
+	"mmorpg.affix.item_flat_dodge": "Scaled",
+	"mmorpg.affix.item_flat_ms": "Fortified",
+	"mmorpg.affix.item_perc_armor": "Reinforced",
+	"mmorpg.affix.item_perc_dodge": "Scaled",
+	"mmorpg.affix.item_perc_ms": "Fortified",
+	"mmorpg.affix.jade_amulet": "Jade Amulet",
+	"mmorpg.affix.lapis_amulet": "Lapis Amulet",
+	"mmorpg.affix.light_res_eye": "Unused",
+	"mmorpg.affix.lightning_damage_eye": "Unused",
+	"mmorpg.affix.lightning_res": "Of the Yeti",
+	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
+	"mmorpg.affix.lightning_staff": "Lightning Staff",
+	"mmorpg.affix.lunaris_circlet": "Lunaris Circlet",
+	"mmorpg.affix.magic_shield_eye": "Unused",
+	"mmorpg.affix.magic_shield_reg_eye": "Unused",
+	"mmorpg.affix.mana_reg": "Soothing",
+	"mmorpg.affix.mana_reg_eye": "Unused",
+	"mmorpg.affix.mana_ring": "Paua Ring",
+	"mmorpg.affix.mana_thief": "Mana Thief's",
+	"mmorpg.affix.mind_cage": "Mind Cage",
+	"mmorpg.affix.ms_reg": "Stabilizing",
+	"mmorpg.affix.ms_ring": "Moonstone Ring",
+	"mmorpg.affix.necro_helmet": "Necromancer Helm",
+	"mmorpg.affix.oakwood_staff": "Oak Wood Staff",
+	"mmorpg.affix.of_affluence": "Of Affluence",
+	"mmorpg.affix.of_azure_skies": "Of Azure Skies",
+	"mmorpg.affix.of_brutality": "Of Brutality",
+	"mmorpg.affix.of_consumption": "Of Consumption",
+	"mmorpg.affix.of_devastation": "Of Devastation",
+	"mmorpg.affix.of_energy": "Of Energy",
+	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
+	"mmorpg.affix.of_gluttony": "Of Gluttony",
+	"mmorpg.affix.of_less_cd": "Of Repetition",
+	"mmorpg.affix.of_mana": "Of Mana",
+	"mmorpg.affix.of_pene": "Of Penetration",
+	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
+	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
+	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
+	"mmorpg.affix.of_the_sky": "Of the Sky",
+	"mmorpg.affix.of_the_titan": "Of the Titan",
+	"mmorpg.affix.of_the_troll": "Of The Troll",
+	"mmorpg.affix.of_the_wind": "Of the Wind",
+	"mmorpg.affix.of_treasure": "Of Treasure",
+	"mmorpg.affix.of_vampirism": "Of Vampirism",
+	"mmorpg.affix.physical_damage_eye": "Unused",
+	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
+	"mmorpg.affix.precise": "Precise",
+	"mmorpg.affix.promised": "Promised",
+	"mmorpg.affix.royal_helm": "Royal Helm",
+	"mmorpg.affix.rusted_sword": "Rusted Sword",
+	"mmorpg.affix.scavanger": "Scavanger",
+	"mmorpg.affix.seraphim": "Seraphim's",
+	"mmorpg.affix.siege_helm": "Siege Helmet",
+	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
+	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
+	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
+	"mmorpg.affix.summon_dmg_eye": "Unused",
+	"mmorpg.affix.thicket_bow": "Thicket Bow",
+	"mmorpg.affix.thicket_crossbow": "Thicket Crossbow",
+	"mmorpg.affix.thorn_rapier": "Thorn Rapier",
+	"mmorpg.affix.true_hit": "True Hit",
+	"mmorpg.affix.twilight_blade": "Twilight Blade",
+	"mmorpg.affix.vampiric": "Vampiric",
+	"mmorpg.affix.vdo_mask": "Voodoo Mask",
+	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
+	"mmorpg.affix.water_res": "Of the Storm",
+	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
+	"mmorpg.affix.water_wep_dmg": "Chilled",
+	"mmorpg.affix.wep_item_both": "Miserable",
+	"mmorpg.affix.wep_item_flat": "Deadly",
+	"mmorpg.affix.wep_item_perc": "Cruel",
+	"mmorpg.affix.wildfire_staff": "Wildfire Staff",
+	"mmorpg.affix.wolf_pelt": "Wolf Pelt",
+
+"_comment": " [CATEGORY]: AFFIXES - NAMES",
+
+
 "_comment": " [CATEGORY]: SPELLS - NAMES",
 
 	"mmorpg.asc_class.hunter": "Hunter",
@@ -2052,138 +2184,6 @@
 	"mmorpg.support_gem.water_pene": "Cold Penetration Support Gem",
 
 "_comment": " [CATEGORY]: SPELLS - NAMES",
-
-
-"_comment": " [CATEGORY]: AFFIXES - NAMES",
-
-	"mmorpg.affix.amber_amulet": "Amber Amulet",
-	"mmorpg.affix.arcane_staff": "Arcane Staff",
-	"mmorpg.affix.archeologists": "Archeologist's",
-	"mmorpg.affix.armor_eye": "Unused",
-	"mmorpg.affix.ass_bow": "Assassin Bow",
-	"mmorpg.affix.ass_crossbow": "Assassin Crossbow",
-	"mmorpg.affix.azure": "Azure",
-	"mmorpg.affix.bandit_mask": "Bandit Mask",
-	"mmorpg.affix.bone_bow": "Bone Bow",
-	"mmorpg.affix.bone_crossbow": "Bone Crossbow",
-	"mmorpg.affix.bone_helm": "Bone Circlet",
-	"mmorpg.affix.boundless": "Boundless",
-	"mmorpg.affix.chaos_damage_eye": "Unused",
-	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
-	"mmorpg.affix.chaos_res": "Of the Snake",
-	"mmorpg.affix.chaos_res_eye": "Unused",
-	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
-	"mmorpg.affix.cleric_staff": "Cleric Staff",
-	"mmorpg.affix.cold_damage_eye": "Unused",
-	"mmorpg.affix.cold_res_eye": "Unused",
-	"mmorpg.affix.crit_prefix": "Critical",
-	"mmorpg.affix.cursed_staff": "Cursed Staff",
-	"mmorpg.affix.desolation": "Desolation",
-	"mmorpg.affix.dodge_eye": "Unused",
-	"mmorpg.affix.dusk_blade": "Dusk Blade",
-	"mmorpg.affix.ene_ring": "Emerald Ring",
-	"mmorpg.affix.energetic": "Energetic",
-	"mmorpg.affix.energy_reg": "Invirogating",
-	"mmorpg.affix.energy_reg_eye": "Unused",
-	"mmorpg.affix.fire_damage_eye": "Unused",
-	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
-	"mmorpg.affix.fire_res": "Of the Drake",
-	"mmorpg.affix.fire_res_eye": "Unused",
-	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
-	"mmorpg.affix.fire_wep_dmg": "Scorched",
-	"mmorpg.affix.focused": "Focused",
-	"mmorpg.affix.glacial_staff": "Glacial Staff",
-	"mmorpg.affix.gladiator_helm": "Gladiator Helm",
-	"mmorpg.affix.glimmering": "Glimmering",
-	"mmorpg.affix.golden_crown": "Golden Crown",
-	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
-	"mmorpg.affix.heal_crit_prefix": "Truthful",
-	"mmorpg.affix.heal_suff": "Of Restoration",
-	"mmorpg.affix.health_reg_eye": "Unused",
-	"mmorpg.affix.hp_ring": "Coral Ring",
-	"mmorpg.affix.hunter_hood": "Hunter Hood",
-	"mmorpg.affix.immortal": "Immortal",
-	"mmorpg.affix.imperial_bow": "Imperial Bow",
-	"mmorpg.affix.imperial_crossbow": "Imperial Crossbow",
-	"mmorpg.affix.item_both_armor": "Reinforced",
-	"mmorpg.affix.item_both_dodge": "Scaled",
-	"mmorpg.affix.item_both_ms": "Fortified",
-	"mmorpg.affix.item_flat_armor": "Reinforced",
-	"mmorpg.affix.item_flat_dodge": "Scaled",
-	"mmorpg.affix.item_flat_ms": "Fortified",
-	"mmorpg.affix.item_perc_armor": "Reinforced",
-	"mmorpg.affix.item_perc_dodge": "Scaled",
-	"mmorpg.affix.item_perc_ms": "Fortified",
-	"mmorpg.affix.jade_amulet": "Jade Amulet",
-	"mmorpg.affix.lapis_amulet": "Lapis Amulet",
-	"mmorpg.affix.light_res_eye": "Unused",
-	"mmorpg.affix.lightning_damage_eye": "Unused",
-	"mmorpg.affix.lightning_res": "Of the Yeti",
-	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
-	"mmorpg.affix.lightning_staff": "Lightning Staff",
-	"mmorpg.affix.lunaris_circlet": "Lunaris Circlet",
-	"mmorpg.affix.magic_shield_eye": "Unused",
-	"mmorpg.affix.magic_shield_reg_eye": "Unused",
-	"mmorpg.affix.mana_reg": "Soothing",
-	"mmorpg.affix.mana_reg_eye": "Unused",
-	"mmorpg.affix.mana_ring": "Paua Ring",
-	"mmorpg.affix.mana_thief": "Mana Thief's",
-	"mmorpg.affix.mind_cage": "Mind Cage",
-	"mmorpg.affix.ms_reg": "Stabilizing",
-	"mmorpg.affix.ms_ring": "Moonstone Ring",
-	"mmorpg.affix.necro_helmet": "Necromancer Helm",
-	"mmorpg.affix.oakwood_staff": "Oak Wood Staff",
-	"mmorpg.affix.of_affluence": "Of Affluence",
-	"mmorpg.affix.of_azure_skies": "Of Azure Skies",
-	"mmorpg.affix.of_brutality": "Of Brutality",
-	"mmorpg.affix.of_consumption": "Of Consumption",
-	"mmorpg.affix.of_devastation": "Of Devastation",
-	"mmorpg.affix.of_energy": "Of Energy",
-	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
-	"mmorpg.affix.of_gluttony": "Of Gluttony",
-	"mmorpg.affix.of_less_cd": "Of Repetition",
-	"mmorpg.affix.of_mana": "Of Mana",
-	"mmorpg.affix.of_pene": "Of Penetration",
-	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
-	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
-	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
-	"mmorpg.affix.of_the_sky": "Of the Sky",
-	"mmorpg.affix.of_the_titan": "Of the Titan",
-	"mmorpg.affix.of_the_troll": "Of The Troll",
-	"mmorpg.affix.of_the_wind": "Of the Wind",
-	"mmorpg.affix.of_treasure": "Of Treasure",
-	"mmorpg.affix.of_vampirism": "Of Vampirism",
-	"mmorpg.affix.physical_damage_eye": "Unused",
-	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
-	"mmorpg.affix.precise": "Precise",
-	"mmorpg.affix.promised": "Promised",
-	"mmorpg.affix.royal_helm": "Royal Helm",
-	"mmorpg.affix.rusted_sword": "Rusted Sword",
-	"mmorpg.affix.scavanger": "Scavanger",
-	"mmorpg.affix.seraphim": "Seraphim's",
-	"mmorpg.affix.siege_helm": "Siege Helmet",
-	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
-	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
-	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
-	"mmorpg.affix.summon_dmg_eye": "Unused",
-	"mmorpg.affix.thicket_bow": "Thicket Bow",
-	"mmorpg.affix.thicket_crossbow": "Thicket Crossbow",
-	"mmorpg.affix.thorn_rapier": "Thorn Rapier",
-	"mmorpg.affix.true_hit": "True Hit",
-	"mmorpg.affix.twilight_blade": "Twilight Blade",
-	"mmorpg.affix.vampiric": "Vampiric",
-	"mmorpg.affix.vdo_mask": "Voodoo Mask",
-	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
-	"mmorpg.affix.water_res": "Of the Storm",
-	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
-	"mmorpg.affix.water_wep_dmg": "Chilled",
-	"mmorpg.affix.wep_item_both": "Miserable",
-	"mmorpg.affix.wep_item_flat": "Deadly",
-	"mmorpg.affix.wep_item_perc": "Cruel",
-	"mmorpg.affix.wildfire_staff": "Wildfire Staff",
-	"mmorpg.affix.wolf_pelt": "Wolf Pelt",
-
-"_comment": " [CATEGORY]: AFFIXES - NAMES",
 
 
 "_comment": " [CATEGORY]: TAGS - NAMES",
@@ -3025,7 +3025,7 @@
 	"spell.desc.poison_cloud": "Erupt with poisonous gas, dealing [calc:poison_cloud] \u00A75\u2600 Chaos\u00A77 Damage to nearby enemies.",
 	"spell.desc.poison_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]\u00A75\u2600 Chaos\u00A77 Damage in area around itself.",
 	"spell.desc.power_chord": "Throw out a ball of music, dealing [calc:power_chord] \u00A76\u2600 Physical\u00A77 Damage and charming enemies, reducing their defenses.",
-	"spell.desc.profane_explosion": "Causes an explosion dealing [calc:shatter] \u00A75\u2600 Chaos\u00A77 Damage",
+	"spell.desc.profane_explosion": "Causes an explosion dealing [calc:profane_explosion] \u00A75\u2600 Chaos\u00A77 Damage",
 	"spell.desc.pull": "Pull enemies in area to you, dealing [calc:pull] \u00A76\u2600 Physical\u00A77 Damage and slowing them.",
 	"spell.desc.quickdraw": "Your bow now fires instantly, and you gain a stack of arrows if you don't have infinity.",
 	"spell.desc.recoil_shot": "Flip backwards while shooting an arrow that deals [calc:explosive_arrow] \u00A76\u2600 Physical\u00A77 Damage and applies Wounds in an area.",
