--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -540,6 +540,62 @@
 "_comment": " [CATEGORY]: DUNGEON - NAMES",
 
 
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
+	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"mmorpg.currency.chaos_orb": "Orb of Chaos",
+	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
+	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
+	"mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 
 	"mmorpg.ailment.bleed": "Bleed",
@@ -581,62 +637,6 @@
 	"mmorpg.effect.wounds": "Wounds",
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
-
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
-	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
-	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
-	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
-	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
-	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
-	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
-	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
-	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -685,12 +685,19 @@
 	"mmorpg.talent.burn_duration_big": "Major Burn Duration",
 	"mmorpg.talent.cdr_big": "Major Cooldown Reduction",
 	"mmorpg.talent.chain_damage_big": "Major Chaining Damage",
-	"mmorpg.talent.champ_class": "Champion",
+	"mmorpg.talent.champion_class": "Champion",
 	"mmorpg.talent.chaos_any_wep_damage_big": "Major Chaos Weapon Damage",
 	"mmorpg.talent.chaos_dot_damage_big": "Major Chaos Damage Over Time",
 	"mmorpg.talent.chaos_penetration_big": "Major Chaos Penetration",
 	"mmorpg.talent.chaos_resist_big": "Major Chaos Resistance",
-	"mmorpg.talent.chief_class": "Chieftain",
+	"mmorpg.talent.chieftain_class": "Chieftain",
+	"mmorpg.talent.chieftain_class_0": "Ignited Explosion",
+	"mmorpg.talent.chieftain_class_1": "Spirit of Fire",
+	"mmorpg.talent.chieftain_class_2": "Skin of Fire",
+	"mmorpg.talent.chieftain_class_3": "The Torch",
+	"mmorpg.talent.chieftain_class_4": "Blooming Flame",
+	"mmorpg.talent.chieftain_class_5": "Swift Burn",
+	"mmorpg.talent.chieftain_class_6": "Fire Drinker",
 	"mmorpg.talent.collateral": "Collateral",
 	"mmorpg.talent.conservation": "Conservation",
 	"mmorpg.talent.critical_damage_big": "Major Crit Damage",
@@ -1278,6 +1285,7 @@
 	"mmorpg.stat.learn_heart_of_ice": "Learn Heart of Ice",
 	"mmorpg.stat.learn_hunter_potion": "Learn Hunter's Potion",
 	"mmorpg.stat.learn_ice_comet": "Learn Ice Comet",
+	"mmorpg.stat.learn_ignite_explosion": "Learn Ignite Explosion",
 	"mmorpg.stat.learn_lightning_nova": "Learn Lightning Nova",
 	"mmorpg.stat.learn_lightning_spear": "Learn Lightning Spear",
 	"mmorpg.stat.learn_lightning_totem": "Learn Lightning Totem",
@@ -1339,6 +1347,7 @@
 	"mmorpg.stat.lightning_mana_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A7a\u2600 Lightning\u00A77 Damage as Mana",
 	"mmorpg.stat.lightning_penetration": "Lightning Penetration",
 	"mmorpg.stat.lightning_resist": "Lightning Resistance",
+	"mmorpg.stat.lightning_resist_per_1_fire_resist": "\u00A7a[VAL1] \u00A7a\u2600 Lightning Resistance\u00A77 per 1 \u00A7c\u2600 Fire Resistance\u00A77",
 	"mmorpg.stat.lightning_spell_dmg": "Lightning Damage",
 	"mmorpg.stat.lightning_spell_dmg_taken": "Lightning Damage Taken",
 	"mmorpg.stat.lightning_vuln_crit": "\u00A77Lightning Damage always crits you.",
@@ -1385,10 +1394,12 @@
 	"mmorpg.stat.max_fire_resist": "Max Fire Resistance",
 	"mmorpg.stat.max_frenzy_charge_charges": "Maximum Frenzy Charge",
 	"mmorpg.stat.max_lightning_resist": "Max Lightning Resistance",
+	"mmorpg.stat.max_lightning_resist_per_1_max_fire_resist": "\u00A7a[VAL1] \u00A7a\u2600 Max Lightning Resistance\u00A77 per 1 \u00A7c\u2600 Max Fire Resistance\u00A77",
 	"mmorpg.stat.max_physical_resist": "Max Physical Resistance",
 	"mmorpg.stat.max_power_charge_charges": "Maximum Power Charge",
 	"mmorpg.stat.max_total_summons": "Maximum Summons",
 	"mmorpg.stat.max_water_resist": "Max Cold Resistance",
+	"mmorpg.stat.max_water_resist_per_1_max_fire_resist": "\u00A7a[VAL1] \u00A7b\u2600 Max Cold Resistance\u00A77 per 1 \u00A7c\u2600 Max Fire Resistance\u00A77",
 	"mmorpg.stat.melee_cast_time": "Melee Cast Time",
 	"mmorpg.stat.melee_cdr": "Melee Spell Cooldown Reduction",
 	"mmorpg.stat.melee_spell_dmg": "Melee Damage",
@@ -1496,7 +1507,7 @@
 	"mmorpg.stat.poison_strength": "Poison Strength",
 	"mmorpg.stat.positive_eff_dur_u_cast": "Positive Effect Duration",
 	"mmorpg.stat.power_charge_on_hit": "\u00A77\u00A7a[VAL1]\u00A77% Chance to get Power Charge On Hit",
-	"mmorpg.stat.proc_profane_explosion": "\u00A77\u00A7a[VAL1]\u00A77% Chance to cause a Profane Exposion on kiling a Cursed Enemy.",
+	"mmorpg.stat.proc_profane_explosion": "\u00A77\u00A7a[VAL1]\u00A77% Chance to cause an Ignited Exposion on kiling an enemy.",
 	"mmorpg.stat.proc_shatter": "\u00A77\u00A7a[VAL1]\u00A77% Chance to casts Bone Shatter when you shatter a bone-chilled enemy. Also gives you Essence of Frost",
 	"mmorpg.stat.proc_shatter_max_frost": "\u00A77\u00A7a[VAL1]\u00A77% Chance to casts Bone Shatter while at max Essence of Frost charges. This only works on spells have the Shatter tag.",
 	"mmorpg.stat.proj_dmg_received": "Projectile Damage Receieved",
@@ -1600,6 +1611,7 @@
 	"mmorpg.stat.water_mana_leech": "\u00A77Leech \u00A7a[VAL1]\u00A77% of your \u00A7b\u2600 Cold\u00A77 Damage as Mana",
 	"mmorpg.stat.water_penetration": "Cold Penetration",
 	"mmorpg.stat.water_resist": "Cold Resistance",
+	"mmorpg.stat.water_resist_per_1_fire_resist": "\u00A7a[VAL1] \u00A7b\u2600 Cold Resistance\u00A77 per 1 \u00A7c\u2600 Fire Resistance\u00A77",
 	"mmorpg.stat.water_vuln_crit": "\u00A77Cold Damage always crits you.",
 	"mmorpg.stat.water_weapon_damage": "Cold DMG on Basic ATK",
 	"mmorpg.stat.weak_immunity": "\u00A77You are Immune to Elemental Weakness",
@@ -1636,6 +1648,46 @@
 	"mmorpg.formatter.special_unique_process.locale_context_for_translator": "currently no use",
 
 "_comment": " [CATEGORY]: FORMATTER - NAMES",
+
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+	"mmorpg.gear_type.bow": "Bow",
+	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
+	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
+	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
+	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
+	"mmorpg.gear_type.crossbow": "Crossbow",
+	"mmorpg.gear_type.leather_boots": "Leather Boots",
+	"mmorpg.gear_type.leather_chest": "Leather Chest",
+	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
+	"mmorpg.gear_type.leather_pants": "Leather Pants",
+	"mmorpg.gear_type.necklace": "Necklace",
+	"mmorpg.gear_type.plate_boots": "Plate Boots",
+	"mmorpg.gear_type.plate_chest": "Plate Chest",
+	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
+	"mmorpg.gear_type.plate_pants": "Plate Pants",
+	"mmorpg.gear_type.ring": "Ring",
+	"mmorpg.gear_type.shield": "Tower Shield",
+	"mmorpg.gear_type.staff": "Staff",
+	"mmorpg.gear_type.sword": "Sword",
+	"mmorpg.gear_type.tome": "Tome",
+	"mmorpg.gear_type.totem": "Totem",
+	"mmorpg.gearslot.boots": "Boots",
+	"mmorpg.gearslot.bow": "Bow",
+	"mmorpg.gearslot.chest": "Chest",
+	"mmorpg.gearslot.crossbow": "Crossbow",
+	"mmorpg.gearslot.helmet": "Helmet",
+	"mmorpg.gearslot.necklace": "Necklace",
+	"mmorpg.gearslot.pants": "Pants",
+	"mmorpg.gearslot.ring": "Ring",
+	"mmorpg.gearslot.shield": "Shield",
+	"mmorpg.gearslot.staff": "Staff",
+	"mmorpg.gearslot.sword": "Sword",
+	"mmorpg.gearslot.tome": "Tome",
+	"mmorpg.gearslot.totem": "Totem",
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
 
 
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
@@ -1692,46 +1744,6 @@
 	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
 
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
-
-
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
-
-	"mmorpg.gear_type.bow": "Bow",
-	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
-	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
-	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
-	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
-	"mmorpg.gear_type.crossbow": "Crossbow",
-	"mmorpg.gear_type.leather_boots": "Leather Boots",
-	"mmorpg.gear_type.leather_chest": "Leather Chest",
-	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
-	"mmorpg.gear_type.leather_pants": "Leather Pants",
-	"mmorpg.gear_type.necklace": "Necklace",
-	"mmorpg.gear_type.plate_boots": "Plate Boots",
-	"mmorpg.gear_type.plate_chest": "Plate Chest",
-	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
-	"mmorpg.gear_type.plate_pants": "Plate Pants",
-	"mmorpg.gear_type.ring": "Ring",
-	"mmorpg.gear_type.shield": "Tower Shield",
-	"mmorpg.gear_type.staff": "Staff",
-	"mmorpg.gear_type.sword": "Sword",
-	"mmorpg.gear_type.tome": "Tome",
-	"mmorpg.gear_type.totem": "Totem",
-	"mmorpg.gearslot.boots": "Boots",
-	"mmorpg.gearslot.bow": "Bow",
-	"mmorpg.gearslot.chest": "Chest",
-	"mmorpg.gearslot.crossbow": "Crossbow",
-	"mmorpg.gearslot.helmet": "Helmet",
-	"mmorpg.gearslot.necklace": "Necklace",
-	"mmorpg.gearslot.pants": "Pants",
-	"mmorpg.gearslot.ring": "Ring",
-	"mmorpg.gearslot.shield": "Shield",
-	"mmorpg.gearslot.staff": "Staff",
-	"mmorpg.gearslot.sword": "Sword",
-	"mmorpg.gearslot.tome": "Tome",
-	"mmorpg.gearslot.totem": "Totem",
-
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
@@ -2078,6 +2090,7 @@
 	"mmorpg.spell.heart_of_ice": "Heart of Ice",
 	"mmorpg.spell.hunter_potion": "Hunter's Potion",
 	"mmorpg.spell.ice_comet": "Ice Comet",
+	"mmorpg.spell.ignite_explosion": "Ignite Explosion",
 	"mmorpg.spell.lightning_nova": "Lightning Nova",
 	"mmorpg.spell.lightning_spear": "Lightning Spear",
 	"mmorpg.spell.lightning_totem": "Lightning Totem",
@@ -2887,7 +2900,7 @@
 	"mmorpg.stat_desc.poison_proc_chance": "Procs the accumulated damage of the ailment",
 	"mmorpg.stat_desc.poison_resistance": "Protects against the ailment, if it's 100%, it acts as immunity.",
 	"mmorpg.stat_desc.poison_strength": "Increases the effect, if it's a DOT, increases damage, if it's not, decreases the amount of damage needed to fully apply it.",
-	"mmorpg.stat_desc.proc_profane_explosion": "This has a short cooldown. You can see the whole spell stats in the Ingame Library TODO",
+	"mmorpg.stat_desc.proc_profane_explosion": "This has a short cooldown. You can see the whole spell stats in the Ingame Library",
 	"mmorpg.stat_desc.proj_dmg_received": "Affects projectile damage, includes projectile spells like fireballs, and ranged basic attacks.",
 	"mmorpg.stat_desc.projectile_cast_time": "Reduces cast time of spells with this tag",
 	"mmorpg.stat_desc.projectile_cdr": "Reduces spell cooldown of spells with the tag.",
@@ -3013,6 +3026,7 @@
 	"spell.desc.heart_of_ice": "Heal allies around you for [calc:heart_of_ice] health.",
 	"spell.desc.hunter_potion": "Drink a potion, healing you for [calc:hunter_pot_heal] health.",
 	"spell.desc.ice_comet": "Summon a meteor that falls from the sky, dealing [calc:ice_comet] \u00A7b\u2600 Cold\u00A77 Damage",
+	"spell.desc.ignite_explosion": "Causes an fiery explosion dealing [calc:ignite_explosion] \u00A7c\u2600 Fire\u00A77 Damage",
 	"spell.desc.lightning_nova": "Deal [calc:lightning_nova] \u00A7a\u2600 Lightning\u00A77 Damage to nearby enemies.",
 	"spell.desc.lightning_spear": "Throw out an electric spear, dealing [calc:lightning_spear] \u00A7a\u2600 Lightning\u00A77 Damage",
 	"spell.desc.lightning_totem": "Summon a lightning totem that deals [calc:lightning_totem] \u00A7a\u2600 Lightning\u00A77 Damage in an area every second.",
